force-app/main/default/objects/Planned_Service__c/Planned_Service__c.object-meta.xml
<CustomObject>
    <description>ECM Planned service for service planning</description>
    <label>Planned Service</label>
    <nameField>
        <displayFormat>PlannedService-{0000}</displayFormat>
        <label>Planned Service #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planned Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>