force-app/main/default/objects/Planned_Service__c/fields/Additional_Service_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Additional_Service_Recipients__c</fullName>
    <label>Additional Service Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>