force-app/main/default/objects/Planned_Service__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Planned Services</relationshipLabel>
    <relationshipName>Planned_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>