force-app/main/default/objects/Planned_Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Planned Services</relationshipLabel>
    <relationshipName>Planned_Services</relationshipName>
    <type>Lookup</type>
</CustomField>