force-app/main/default/objects/Planned_Service__c/fields/Service_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Service_Recipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Recipient</label>
    <referenceTo>Case_Participation__c</referenceTo>
    <relationshipLabel>Planned Services</relationshipLabel>
    <relationshipName>Planned_Services</relationshipName>
    <type>Lookup</type>
</CustomField>